[gd_scene load_steps=16 format=4 uid="uid://xd1n5pf5s7ry"]

[ext_resource type="Script" uid="uid://basu2cwad7uvl" path="res://scenes/game_scene/levels/level.gd" id="1_rgywr"]
[ext_resource type="PackedScene" uid="uid://bt4kstcod3gq7" path="res://Player/player.tscn" id="2_8s04l"]
[ext_resource type="Texture2D" uid="uid://wvux3ec32fcg" path="res://assets/kenney_1-bit-platformer-pack/Tilemap/monochrome_tilemap.png" id="3_8s04l"]
[ext_resource type="Script" uid="uid://hsq826lweklo" path="res://scenes/game_scene/tutorial_manager.gd" id="3_kjg0a"]
[ext_resource type="PackedScene" uid="uid://4pbpp6fpl06c" path="res://scenes/game_scene/tutorials/tutorial_1.tscn" id="4_w8c7f"]
[ext_resource type="AudioStream" uid="uid://cnririni1nj5" path="res://assets/Music/NGE4.2.wav" id="5_i1l6d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0nr2a"]
size = Vector2(1153, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6i3l"]
size = Vector2(2073, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_623lg"]
size = Vector2(295, 46.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hhcp"]
size = Vector2(33, 717)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8s04l"]
resource_name = "Tile Map"
texture = ExtResource("3_8s04l")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/left_side = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0

[sub_resource type="TileSet" id="TileSet_y0mvw"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "single thick"
terrain_set_0/terrain_0/color = Color(0.356863, 0.360784, 1, 1)
sources/0 = SubResource("TileSetAtlasSource_8s04l")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0mvw"]
size = Vector2(1148, 639)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sycfm"]
size = Vector2(5040, 835)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmyid"]
size = Vector2(137.5, 133)

[node name="Level_1" type="Node2D"]
script = ExtResource("1_rgywr")

[node name="Player" parent="." instance=ExtResource("2_8s04l")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_top = 556.0
offset_right = 1153.0
offset_bottom = 649.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(577.5, 602)
shape = SubResource("RectangleShape2D_0nr2a")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticBody2D3"]
offset_left = 877.0
offset_top = 433.0
offset_right = 2954.0
offset_bottom = 493.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(1910.5, 460)
shape = SubResource("RectangleShape2D_w6i3l")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticBody2D4"]
offset_left = 3154.0
offset_top = 440.0
offset_right = 3451.0
offset_bottom = 490.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(3301.5, 465.75)
shape = SubResource("RectangleShape2D_623lg")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, 318)
shape = SubResource("RectangleShape2D_2hhcp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(3468, 349)
shape = SubResource("RectangleShape2D_2hhcp")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -32)
scale = Vector2(4.85839, 3.68372)
tile_map_data = PackedByteArray("AAAOAAoAAAAGAAMAAAAAAAoAAAAEAAMAAAABAAoAAAAFAAMAAAACAAoAAAAFAAMAAAADAAoAAAAFAAMAAAAEAAoAAAAFAAMAAAAFAAoAAAAFAAMAAAAGAAoAAAAFAAMAAAAHAAoAAAAFAAMAAAAIAAoAAAAFAAMAAAAJAAoAAAAFAAMAAAAKAAoAAAAFAAMAAAALAAoAAAAFAAMAAAAMAAoAAAAFAAMAAAANAAoAAAAFAAMAAAALAAgAAAAEAAQAAAAMAAgAAAAFAAQAAAANAAgAAAAFAAQAAAAOAAgAAAAFAAQAAAAPAAgAAAAFAAQAAAAQAAgAAAAFAAQAAAARAAgAAAAFAAQAAAASAAgAAAAFAAQAAAATAAgAAAAFAAQAAAAUAAgAAAAFAAQAAAAVAAgAAAAFAAQAAAAWAAgAAAAFAAQAAAAXAAgAAAAFAAQAAAAYAAgAAAAFAAQAAAAZAAgAAAAFAAQAAAAaAAgAAAAFAAQAAAAbAAgAAAAFAAQAAAAcAAgAAAAFAAQAAAAdAAgAAAAFAAQAAAAeAAgAAAAFAAQAAAAfAAgAAAAFAAQAAAAgAAgAAAAFAAQAAAAhAAgAAAAFAAQAAAAiAAgAAAAFAAQAAAAjAAgAAAAFAAQAAAAkAAgAAAAFAAQAAAAlAAgAAAAGAAQAAAAoAAgAAAAEAAUAAAApAAgAAAAFAAUAAAAqAAgAAAAFAAUAAAArAAgAAAAFAAUAAAAsAAgAAAAGAAUAAAADAAUAAAAKABAAAAAEAAUAAAALABAAAAAFAAUAAAAMABAAAAADAAcAAAAPABAAAAAEAAcAAAAQABAAAAAFAAcAAAARABAAAAADAAMAAAAKAAgAAAAEAAMAAAALAAgAAAAFAAMAAAAMAAgAAAAHAAMAAAAEAAMAAAAIAAMAAAAFAAMAAAAJAAMAAAAGAAMAAAAHAAUAAAAEAAQAAAAIAAUAAAAFAAQAAAAJAAUAAAAGAAQAAAAHAAcAAAAEAAUAAAAIAAcAAAAFAAUAAAAJAAcAAAAGAAUAAAALAAMAAAAEAAcAAAAMAAMAAAAFAAcAAAANAAMAAAAGAAcAAAA=")
tile_set = SubResource("TileSet_y0mvw")

[node name="Camera1" type="Camera2D" parent="."]
visible = false
z_index = -1
position = Vector2(578, 334)
rotation = 1.63886
scale = Vector2(59.335, 200)
skew = -0.23911
metadata/_edit_group_ = true

[node name="cameraview1" type="Area2D" parent="Camera1"]
z_index = -1
position = Vector2(-7.29635, 3.0822)
rotation = -1.04891
scale = Vector2(0.00592297, 0.0170974)
skew = -0.542359
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera1/cameraview1"]
z_index = -1
position = Vector2(576, 322.5)
shape = SubResource("RectangleShape2D_y0mvw")

[node name="Camera2" type="Camera2D" parent="."]
visible = false
position = Vector2(1734, 334)
rotation = 1.63886
scale = Vector2(59.335, 200)
skew = -0.23911
metadata/_edit_group_ = true

[node name="cameraview2" type="Area2D" parent="Camera2"]
position = Vector2(-5.40321, -0.0923257)
rotation = -1.04891
scale = Vector2(0.00592297, 0.0170974)
skew = -0.542359
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2/cameraview2"]
position = Vector2(-41, 319)
shape = SubResource("RectangleShape2D_y0mvw")

[node name="Camera3" type="Camera2D" parent="."]
visible = false
position = Vector2(2887, 333)
rotation = 1.63886
scale = Vector2(59.335, 200)
skew = -0.23911
metadata/_edit_group_ = true

[node name="cameraview3" type="Area2D" parent="Camera3"]
position = Vector2(-5.40321, -0.0923257)
rotation = -1.04891
scale = Vector2(0.00592297, 0.0170974)
skew = -0.542359
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera3/cameraview3"]
position = Vector2(-41, 319)
shape = SubResource("RectangleShape2D_y0mvw")

[node name="Control2" type="Control" parent="."]
layout_direction = 4
layout_mode = 3
anchors_preset = 0
offset_left = 747.0
offset_top = 298.0
offset_right = 925.0
offset_bottom = 388.0
metadata/_edit_group_ = true

[node name="MovmentSign" type="RichTextLabel" parent="Control2"]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 175.0
offset_bottom = 96.0
bbcode_enabled = true
text = "[center]hold jump to jump higher[/center]"
fit_content = true

[node name="ColorRect" type="ColorRect" parent="Control2"]
z_index = -1
layout_mode = 0
offset_right = 180.0
offset_bottom = 91.0
color = Color(0, 0, 0, 1)

[node name="WinButton" type="Button" parent="."]
offset_left = 3629.0
offset_top = 335.0
offset_right = 3749.0
offset_bottom = 366.0
size_flags_horizontal = 3
text = "Start Game"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 326.0
offset_top = 598.0
offset_right = 462.0
offset_bottom = 629.0
text = "Change Color"

[node name="TutorialManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_kjg0a")
tutorial_scenes = Array[PackedScene]([ExtResource("4_w8c7f")])

[node name="KillBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
position = Vector2(1979, 1951)
shape = SubResource("RectangleShape2D_sycfm")

[node name="LevelEndArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelEndArea"]
position = Vector2(3380.75, 371.5)
shape = SubResource("RectangleShape2D_pmyid")

[node name="BackgroundColor" type="ColorRect" parent="LevelEndArea"]
unique_name_in_owner = true
visible = false
offset_left = 48.0
offset_right = 48.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="LevelEndArea"]
offset_left = 3311.0
offset_top = 304.0
offset_right = 3452.0
offset_bottom = 441.0
color = Color(0.231415, 0.543345, 0.392413, 1)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 89.0
offset_top = 599.0
offset_right = 319.0
offset_bottom = 622.0
text = "Change Level End Area Color: "

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1938, 113)
stream = ExtResource("5_i1l6d")
autoplay = true
max_distance = 4096.0

[connection signal="body_entered" from="Camera1/cameraview1" to="." method="_on_cameraview_1_body_entered"]
[connection signal="area_entered" from="Camera2/cameraview2" to="." method="_on_cameraview_2_area_entered"]
[connection signal="body_entered" from="Camera2/cameraview2" to="." method="_on_cameraview_2_body_entered"]
[connection signal="body_entered" from="Camera3/cameraview3" to="." method="_on_cameraview_3_body_entered"]
[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
[connection signal="body_entered" from="KillBox" to="." method="_on_kill_box_body_entered"]
[connection signal="body_entered" from="LevelEndArea" to="." method="_on_level_end_area_body_entered"]
